# tree-sitter-q

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yaml
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tree_sitter_q/: __init__.py  binding.c
bindings/rust/: build.rs
examples/: factorial.q
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: assignment.txt  comments.txt  datetime.txt  definitions.txt  dsl.txt  function_app.txt  function_def.txt  function_mod.txt  infix.txt  invalid_atom.txt  literal_list.txt  minus_sign_tests.txt  multiline.txt  nullInfty.txt  number.txt  prefix_exp.txt  progn.txt  sql.txt  symbols.txt  system_cmd.txt  variables.txt
