[package]
name = "tree-sitter-q"
description = "A treesitter parser for q"
version = "0.2.0"
authors = ["Justin Yu <jusytinyu@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "q"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/Gchouchou/tree-sitter-q.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.25.3"
